--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
+.firebase
+.firebaserc
+.firebase.js
 
 # testing
 /coverage
@@ -21,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+database-debug.log*
+firebase-debug.log*
