--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.8.3",
     "@tinymce/tinymce-react": "^3.13.0",
     "bootstrap": "^5.1.1",
+    "firebase": "^9.6.11",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
     "sass": "^1.42.1",
