--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ yarn-debug.log*
 yarn-error.log*
 database-debug.log*
 firebase-debug.log*
-firebase.js
+firebase.js.local
 .firebase/hosting.YnVpbGQ.cache
 *.cache
